--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@tanstack/react-query": "^5.72.2",
     "antd": "^5.24.6",
     "axios": "^1.8.4",
     "react": "^19.0.0",
