--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev":"npx nodemon src/index.js"
+    "dev": "npx nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,8 +13,11 @@
   "dependencies": {
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "directory-tree": "^3.5.2",
     "dotenv": "^16.4.7",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "uuid": "^11.1.0",
+    "uuid4": "^2.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
