--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,10 +15,10 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "directory-tree": "^3.5.2",
+    "dockerode": "^4.0.6",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "socket.io": "^4.8.1",
-    "socketio": "^1.0.0",
     "uuid": "^11.1.0",
     "uuid4": "^2.0.3"
   },
