--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,7 +20,8 @@
     "express": "^5.1.0",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0",
-    "uuid4": "^2.0.3"
+    "uuid4": "^2.0.3",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
